tests/ui/traits/next-solver/assembly/runaway-impl-candidate-selection.stderr
error[E0283]: type annotations needed
  --> $DIR/runaway-impl-candidate-selection.rs:13:22
   |
LL |     println!("{:?}", iter::<_>());
   |               ----   ^^^^^^^^^^^ cannot infer type
   |               |
   |               required by a bound introduced by this call
   |
   = note: cannot satisfy `_: Debug`
note: required by a bound in `core::fmt::rt::Argument::<'_>::new_debug`
  --> $SRC_DIR/core/src/fmt/rt.rs:LL:COL

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0283`.
